--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,11 +40,16 @@ dependencies:
   shared_preferences: ^2.0.5
   google_mobile_ads: ^0.11.0+3
   image_picker: ^0.7.3
+  url_launcher: ^6.0.3
+  mobx: ^2.0.1
+  flutter_mobx: ^2.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.9.0
+  mobx_codegen: ^2.0.1+2
+  build_runner: ^1.12.2
 flutter_icons:
   android: "launcher_icon"
   ios: true
