--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -43,8 +43,8 @@ android {
         applicationId "com.andre.radiosalvaterrafm"
         minSdkVersion 21
         targetSdkVersion 30
-        versionCode 16
-        versionName "2.0.8"
+        versionCode 18
+        versionName "2.0.9"
     }
 
    signingConfigs {
@@ -58,6 +58,8 @@ android {
    buildTypes {
        release {
            signingConfig signingConfigs.release
+           shrinkResources false
+           minifyEnabled false
        }
    }
 }
