--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,8 @@ dependencies:
   url_launcher: ^6.0.3
   mobx: ^2.0.1
   flutter_mobx: ^2.0.0
-
+  firebase_messaging: ^9.1.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
