--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   mobx: ^2.0.1
   flutter_mobx: ^2.0.0
   firebase_messaging: ^9.1.1
+  share: ^0.6.4+2
   
 dev_dependencies:
   flutter_test:
