--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -27,31 +27,33 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  responsive_framework: ^0.1.0
-  flutter_radio: ^0.1.8
+  cupertino_icons: ^1.0.3
+  responsive_framework: ^0.1.4
   auto_size_text: ^3.0.0-nullsafety.0
-  curved_navigation_bar: ^0.4.0-nullsafety.0
-  hexcolor: ^2.0.3
-  firebase_core: ^1.0.1
-  cloud_firestore: ^1.0.1
-  firebase_auth: ^1.0.1
-  google_sign_in: ^5.0.0
-  shared_preferences: ^2.0.5
-  google_mobile_ads: ^0.11.0+3
-  image_picker: ^0.7.3
-  url_launcher: ^6.0.3
-  mobx: ^2.0.1
-  flutter_mobx: ^2.0.0
-  firebase_messaging: ^9.1.1
-  share: ^0.6.4+2
+  audioplayers: ^0.19.1
+  curved_navigation_bar: ^1.0.1
+  hexcolor: ^2.0.4
+  firebase_core: ^1.4.0
+  cloud_firestore: ^2.4.0
+  firebase_auth: ^3.0.1
+  google_sign_in: ^5.0.7
+  shared_preferences: ^2.0.6
+  google_mobile_ads: ^0.13.3
+  image_picker: ^0.8.3
+  url_launcher: ^6.0.9
+  mobx: ^2.0.3
+  flutter_mobx: ^2.0.1
+  firebase_messaging: ^10.0.4
+  share: ^2.0.4
+  flutter_modular: ^3.3.1
   
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.9.0
-  mobx_codegen: ^2.0.1+2
-  build_runner: ^1.12.2
+  flutter_launcher_icons: ^0.9.1
+  mobx_codegen: ^2.0.2
+  build_runner: ^2.0.0
+  flutter_modular_test: ^1.0.1
 flutter_icons:
   android: "launcher_icon"
   ios: true
