--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,7 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "Imagens/radioMais.png"
+  image_path: "Imagens/mini-radio.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -107,3 +107,4 @@ flutter:
   - 'Imagens/raimundo.jpeg'
   - Imagens/radio.png
   - Imagens/radioMais.png
+  - Imagens/mini-radio.png
