--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,8 @@ dependencies:
   mobx: ^2.0.4
   flutter_mobx: ^2.0.2
   share: ^2.0.4
-  flutter_modular: ^3.4.1+1 
+  sign_in_with_apple: ^3.0.0
+  flutter_radio_player: ^1.0.7
   
 dev_dependencies:
   flutter_test:
@@ -50,7 +51,6 @@ dev_dependencies:
   flutter_launcher_icons: ^0.9.1
   mobx_codegen: ^2.0.2
   build_runner: ^2.0.0
-  flutter_modular_test: ^1.0.1
 flutter_icons:
   android: "launcher_icon"
   ios: true
