--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -43,7 +43,9 @@ dependencies:
   flutter_mobx: ^2.0.2
   share: ^2.0.4
   sign_in_with_apple: ^3.0.0
-  flutter_radio_player: ^1.0.7
+  flutter_modular: ^4.2.0
+  package_info_plus: ^1.3.0
+  dartz: ^0.10.1
   
 dev_dependencies:
   flutter_test:
