--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,13 +36,12 @@ dependencies:
   cloud_firestore: ^2.5.2
   firebase_auth: ^3.1.1
   google_sign_in: ^5.1.0
-  shared_preferences: ^2.0.7
   google_mobile_ads: ^0.13.4
-  url_launcher: ^6.0.10
+  url_launcher: ^6.0.17
   mobx: ^2.0.4
+  progress_state_button: ^1.0.4
   flutter_mobx: ^2.0.2
   share: ^2.0.4
-  sign_in_with_apple: ^3.0.0
   flutter_modular: ^4.2.0
   package_info_plus: ^1.3.0
   dartz: ^0.10.1
