--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.3
+  flutter_webview_plugin: ^0.4.0
   responsive_framework: ^0.1.4
   auto_size_text: ^3.0.0-nullsafety.0
   audioplayers: ^0.20.0
