--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.3
-  flutter_webview_plugin: ^0.4.0
+
+  platform: ^3.1.0
+  ## flutter_webview_plugin: ^0.4.0
   responsive_framework: ^0.1.4
   auto_size_text: ^3.0.0-nullsafety.0
   audioplayers: ^0.20.0
-  hexcolor: ^2.0.5
+
   firebase_core: ^1.6.0
   cloud_firestore: ^2.5.2
   firebase_auth: ^3.1.1
