--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,12 +40,12 @@ dependencies:
   firebase_auth: ^3.1.1
   google_sign_in: ^5.1.0
   google_mobile_ads: ^0.13.4
-  url_launcher: ^6.0.17
+  url_launcher: ^6.1.6
   progress_state_button: ^1.0.4
-  share: ^2.0.4
+  share_plus: ^5.0.0
   flutter_bloc: ^8.0.1
   flutter_modular: ^4.2.0
-  package_info_plus: ^1.3.0
+  package_info_plus: ^2.0.0
   dartz: ^0.10.1
   
 dev_dependencies:
