--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -48,8 +48,8 @@ android {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.andre.radiosalvaterrafm"
         minSdkVersion 24
-        versionCode 35
-        versionName "2.10.4"
+        versionCode flutterVersionCode.toInteger()
+        versionName flutterVersionName
     }
 
    signingConfigs {
