--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 2.10.4+35
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.19.6 <3.0.0"
 
 dependencies:
   flutter:
@@ -31,29 +31,29 @@ dependencies:
 
   platform: ^3.1.0
   ## flutter_webview_plugin: ^0.4.0
-  responsive_framework: ^0.1.4
+  responsive_framework: ^1.0.0
   auto_size_text: ^3.0.0-nullsafety.0
-  audioplayers: ^0.20.0
+  audioplayers: ^4.1.0
   social_login_buttons: ^1.0.6+2
 
-  firebase_core: ^1.6.0
-  cloud_firestore: ^2.5.2
-  firebase_auth: ^3.1.1
-  google_sign_in: ^5.1.0
-  sign_in_with_apple: ^4.1.0
-  google_mobile_ads: ^0.13.4
+  firebase_core: ^2.14.0
+  cloud_firestore: ^4.8.2
+  firebase_auth: ^4.6.3
+  google_sign_in: ^6.1.4
+  sign_in_with_apple: ^5.0.0
+  google_mobile_ads: ^3.0.0
   url_launcher: ^6.1.6
   progress_state_button: ^1.0.4
-  share_plus: ^5.0.0
+  share_plus: ^7.0.2
   flutter_bloc: ^8.0.1
-  flutter_modular: ^4.2.0
-  package_info_plus: ^2.0.0
+  package_info_plus: ^4.0.2
   dartz: ^0.10.1
+  get_it: ^7.6.0
   
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.9.1
+  flutter_launcher_icons: ^0.13.1
 flutter_icons:
   android: "launcher_icon"
   ios: true
